--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,30 +1,89 @@
-# This file configures the static analysis results for your project (errors,
-# warnings, and lints).
+# This file configures the analyzer, which statically analyzes Dart code to
+# check for errors, warnings, and lints.
 #
-# This enables the 'recommended' set of lints from `package:lints`.
-# This set helps identify many issues that may lead to problems when running
-# or consuming Dart code, and enforces writing Dart using a single, idiomatic
-# style and format.
-#
-# If you want a smaller set of lints you can change this to specify
-# 'package:lints/core.yaml'. These are just the most critical lints
-# (the recommended set includes the core lints).
-# The core lints are also what is used by pub.dev for scoring packages.
+# The issues identified by the analyzer are surfaced in the UI of Dart-enabled
+# IDEs (https://dart.dev/tools#ides-and-editors). The analyzer can also be
+# invoked from the command line by running `flutter analyze`.
 
-include: package:lints/recommended.yaml
+# The following line activates a set of recommended lints for Flutter apps,
+# packages, and plugins designed to encourage good coding practices.
+include: package:flutter_lints/flutter.yaml
 
-# Uncomment the following section to specify additional rules.
+# https://dart.dev/guides/language/analysis-options
+analyzer:
+  exclude: [
+  ]
+  language:
+    strict-casts: true
+    strict-inference: true
+    strict-raw-types: true
 
-# linter:
-#   rules:
-#     - camel_case_types
+linter:
+  # The lint rules applied to this project can be customized in the
+  # section below to disable rules from the `package:flutter_lints/flutter.yaml`
+  # included above or to enable additional rules. A list of all available lints
+  # and their documentation is published at
+  # https://dart-lang.github.io/linter/lints/index.html.
+  #
+  # Instead of disabling a lint rule for the entire project in the
+  # section below, it can also be suppressed for a single line of code
+  # or a specific dart file by using the `// ignore: name_of_lint` and
+  # `// ignore_for_file: name_of_lint` syntax on the line or in the file
+  # producing the lint.
+  rules:
+    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
+    prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    prefer_final_locals: true
+    prefer_final_in_for_each: true
+    cancel_subscriptions: true
+    discarded_futures: true
+    no_self_assignments: true
+    no_wildcard_variable_uses: true
+    prefer_void_to_null: true
+    unnecessary_statements: true
+    # Style rules
+    always_declare_return_types: true
+    always_put_control_body_on_new_line: true
+    always_put_required_named_parameters_first: true
+    avoid_annotating_with_dynamic: true
+    avoid_double_and_int_checks: true
+    avoid_escaping_inner_quotes: true
+    avoid_field_initializers_in_const_classes: true #cSpell: disable-line
+    avoid_final_parameters: true
+    avoid_multiple_declarations_per_line: true
+    avoid_redundant_argument_values: true
+    avoid_returning_this: true
+    avoid_unused_constructor_parameters: true
+    cascade_invocations: true
+    cast_nullable_to_non_nullable: true
+    combinators_ordering: true  #cSpell: disable-line
+    directives_ordering: true
+    do_not_use_environment: true
+    flutter_style_todos: true
+    join_return_with_assignment: true
+    leading_newlines_in_multiline_strings: true
+    lines_longer_than_80_chars: true
+    matching_super_parameters: true
+    no_literal_bool_comparisons: true
+    noop_primitive_operations: true
+    parameter_assignments: true
+    prefer_int_literals: true
+    sized_box_shrink_expand: true
+    unawaited_futures: true #cSpell: disable-line
+    unnecessary_await_in_return: true
+    unnecessary_breaks: true
+    unnecessary_lambdas: true
+    unnecessary_parenthesis: true
+    unnecessary_raw_strings: true
+    unreachable_from_main: true
+    use_colored_box: true
+    use_decorated_box: true
+    use_enums: true
+    use_is_even_rather_than_modulo: true
+    use_named_constants: true
+    use_raw_strings: true
+    use_string_buffers: true
+    use_to_and_as_if_applicable: true
 
-# analyzer:
-#   exclude:
-#     - path/to/excluded/files/**
-
-# For more information about the core and recommended set of lints, see
-# https://dart.dev/go/core-lints
-
-# For additional information about configuring this file, see
+# Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
