--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,16 @@
 name: mock_http
-description: An Http mock library
-version: 2.0.0
+description: A Http mock library
+version: 3.0.0
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: ">=3.4.1 <4.0.0"
 
 dependencies: 
-  http: ^1.0.0
+  http: ^1.2.1
 
 dev_dependencies:
-  lints: ^2.0.0
-  test: ^1.16.0
+  lints: ^4.0.0
+  flutter_test:
+    sdk: flutter
+
 
